# Canadian-Experience

./: README.md
CanadianExperienceLib/: CMakeLists.txt  MachineAdapter.cpp  MachineAdapter.h  MachineFactory.cpp  MachineFactory.h  MachineStartTimeDlg.cpp  MachineStartTimeDlg.h  PictureFactory.cpp  SpartyFactory.cpp
MachineLib/: Box.cpp  Box.h  CMakeLists.txt  Cam.cpp  Cam.h  Component.cpp  Component.h  Crank.cpp  Crank.h  IMachineSystem.h  IRotationSink.h  Key.cpp  Key.h  KeyDropResponder.h  Machine.cpp  Machine.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.cpp  Machine2Factory.h  MachineDialog.h  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  MachineSystemFactory.h  Polygon.h  Pulley.cpp  Pulley.h  RotationSource.h  Shaft.cpp  Shaft.h  Sparty.cpp  Sparty.h
Solution/: FINALANIM.anim
html/: _actor_8h.html  _actor_8h_source.html  _box_8cpp.html  _box_8cpp.js  _box_8h.html  _box_8h_source.html  _cam_8cpp.html  _cam_8cpp.js  _cam_8h.html  _cam_8h_source.html  _component_8cpp.html  _component_8h.html  _component_8h_source.html  _crank_8cpp.html  _crank_8h.html  _crank_8h.js  _crank_8h_source.html  _drawable_8h_source.html  _harold_factory_8h_source.html  _head_top_8h_source.html  _i_machine_system_8h.html  _i_machine_system_8h_source.html  _i_rotation_sink_8h.html  _i_rotation_sink_8h_source.html  _key_8cpp.html  _key_8cpp.js  _key_8h.html  _key_8h.js  _key_8h_source.html  _key_drop_responder_8h.html  _key_drop_responder_8h.js  _key_drop_responder_8h_source.html  _machine1_factory_8cpp.html  _machine1_factory_8h.html  _machine_8cpp.html  (+170 more)
(+52 files in other folders)
